Fix for XNAT-2792 (and hopefully put a nail in the coffin of all the z-index issues between YUI and xModal dialogs).
Former-commit-id: 7067c2c64866b8d308e663dfdd1dfe3070c116bb

--- a/plugin-resources/webapp/xnat/style/xnat.css
+++ b/plugin-resources/webapp/xnat/style/xnat.css
@@ -453,10 +453,10 @@ input.invalid { background: #ffc ; }
 
 
 /* POP-UP ELEMENTS */
-body #timeout_dialog_wrapper { z-index: 999999990 !important ; }
-body #session_timeout_dialog_mask { z-index: 999999991 !important ; }
-body #session_timeout_dialog_c { z-index: 999999992 !important ; }
-body #session_timeout_dialog { width: 320px !important ; z-index: 999999999 !important ; }
+body #timeout_dialog_wrapper { z-index: 999990 !important ; }
+body #session_timeout_dialog_mask { z-index: 999991 !important ; }
+body #session_timeout_dialog_c { z-index: 999992 !important ; }
+body #session_timeout_dialog { width: 396px !important ; line-height: 1.5 ; z-index: 999999 !important ; }
 
 body #fileListing_mask { z-index: 2001 !important ; }
 body #fileListing_c { z-index: 2002 !important ; }
